# users-microservice

./: Dockerfile  README.md  pyproject.toml  test_main.py
.github/workflows/: docker.yml
app/: crud.py  database.py  main.py  models.py  schemas.py
src/app/: crud.py  database.py  main.py  models.py  schemas.py
tests/: test_integration.py
