[project]
name = "users-microservice"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "sqlalchemy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "requests",
    "httpx",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
